k8s/dep/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: savior-deployment
  namespace: default
  labels:
    app: savior-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: savior-deployment
  template:
    metadata:
      labels:
        app: savior-deployment
    spec:
      containers:
      - name: savior-deployment
        image: asia-east2-docker.pkg.dev/high-function-378716/savior-images/savior:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "500M"
          limits:
            cpu: "500m"
            memory: "1000M"
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: savior-keys
        
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 8080
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 8080
        #   initialDelaySeconds: 15
        #   periodSeconds: 20
        # env:
        #   - name: PORT
        #     value: "8000"

        #   - name: USE_PRODUCTION
        #     value: "True"

        #   - name: TESTING
        #     value: "False"

        #   - name: ABSOLUTE_PATH
        #     value: "app"

        #   - name: DOMAIN_NAME
          #   value: "savior.website"

          # - name: DJANGO_SUPERUSER_USERNAME
          #   value: "abuubaida01"

          # - name: DJANGO_SUPERUSER_PASSWORD
          #   value: "fAz881Pn537gajnDzeRQBiB9kzsEvurZ6LPiEeQ8rUc"

          # - name: DJANGO_SUPERUSER_EMAIL
          #   value: "abuubaida901@gmail.com"

          # - name: DJANGO_SUPERUSER_FULLNAME
          #   value: "Abu-Ubaida"

          # - name: DJANGO_SUPERUSER_RELIGION
          #   value: "Islam"

          # - name: DJANGO_SUPERUSER_GENDER
          #   value: "Male"

          # - name: DJANGO_SECRET_KEY
          #   value: "zLHEBvVqwREAYmrT4_25tRklh4Anv5iXbV08s8u26KVSP_5iMBEinzcnEp-bj8qure4"

          # - name: DB_NAME
          #   value: "savior-psql"

          # - name: DB_USERNAME
          #   value: "abuubaida01"

          # - name: DB_PASSWORD
          #   value: "Sp1|@Sl2|7*"

          # - name: DB_HOST
          #   value: "/cloudsql/high-function-378716:asia-south2:saviordb"

          # - name: DB_PORT
          #   value: "5432"

          # - name: EMAIL_USER
          #   value: "famior01@gmail.com"

          # - name: EMAIL_PASSWORD
          #   value: "ddkbuimnyedhkmpy"
