k8s/dep/2service.yaml
apiVersion: v1
kind: Service
metadata:
  name: savior-deployment
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: savior-deployment
