k8s/dep/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: savior-deployment
  namespace: default
  # annotations:
      # cloud.google.com/neg: '{"ingress": true}'
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8000
  selector:
    app: savior-deployment
