k8s/dep/ingress-resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: savior-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: savior.website
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: savior-deployment
            port:
              number: 80
        path: /

    
# "kubernetes.io/ingress.allow-http: "true""
