k8s/dep/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: savior-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: savior-ip
    networking.gke.io/managed-certificates: savior-cert
    kubernetes.io/ingress.class: "gce"

spec:
  defaultBackend:
    service:
      name: savior-deployment
      port:
        number: 80
# spec:
#   tls:
#   - hosts: 
#     - savior.website
#     secretName: savior-cert
#   rules:
#   - host: savior.website
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: savior-deployment
#             port:
#               number: 80
